--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!--Estilo CSS-->
-    <link rel="stylesheet" type="text/css" href="CSS/estilo.css"/>  
+    <link rel="stylesheet" type="text/css" href="https://github.com/neus92/ProgramacionWeb/blob/32646b5a3383a37ddb8205243b68a6297fbe8bf4/estilo.css"/>  
 
     <title>Perfil Profesional!</title>
   </head>
