--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <!--Estilo CSS-->
-    <link rel="stylesheet" type="text/css" href="CSS/estilo.css"/>  
+    <link rel="stylesheet" type="text/css" href="CSS/estilo.css"/> 
+    <link rel="stylesheet" type="text/css" href="estilo.css"/>  
 
     <title>Perfil Profesional!</title>
   </head>
