--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                     <div class="col-5 col-sm-5 ">
                         <h2 class="margenTituloQuienSoy colorblanco text-center">Quien Soy</h2>
-                        <p class="margenParrafoQuienSoy colorblanco text-center"><i>Me caracterizo por ser una persona proactiva y con el gusto del trabajo en equipo para lograr resultados de excelencia en pro de cliente además de consta mente estar en la búsqueda de adquirir conocimientos que demanda el mundo informático.</i></p>
+                        <p class="margenParrafoQuienSoy colorblanco text-center"><i>Me caracterizo por ser una persona proactiva y con el gusto del trabajo en equipo para lograr resultados de excelencia en pro de cliente además de constantemente estar en la búsqueda de adquirir conocimientos que demanda el mundo informático.</i></p>
 
                     </div>
                     <div class="col-5 col-sm-5 " >
